--- a/style.css
+++ b/style.css
@@ -10,3 +10,6 @@ body{
   position: absolute;
   letter-spacing: 3px;
   width: 10em;
+  line-height: 2em;
+  top: calc(50% - 1em) ;
+  left: calc(50% - 5em);
